--- a/reports/ut_report.xml
+++ b/reports/ut_report.xml
@@ -1,142 +1,145 @@
 <testExecutions version="1">
-  <file path="src/app/components/albumes/albumes.component.spec.ts">
-    <testCase name="AlbumesComponent check the header exists should get headers when it exists" duration="108"/>
-    <testCase name="AlbumesComponent check the header exists should create" duration="18"/>
+  <file path="src/app/services/collector.service.spec.ts">
+    <testCase name="Service: Collector should create service" duration="14"/>
+    <testCase name="Service: Collector getCollectors() should return 10 records" duration="7"/>
+    <testCase name="Service: Collector Should have a collector email" duration="3"/>
+    <testCase name="Service: Collector Should have a collector name" duration="4"/>
+    <testCase name="Service: Collector Should have a collector telephone" duration="3"/>
+  </file>
+  <file path="src/app/app.component.spec.ts">
+    <testCase name="AppComponent should trigger click option collector" duration="83"/>
+    <testCase name="AppComponent should trigger click option album with search" duration="13"/>
+    <testCase name="AppComponent should trigger click option albumes" duration="8"/>
+    <testCase name="AppComponent check the first fourth in header  " duration="9"/>
+    <testCase name="AppComponent check the first third in header  " duration="8"/>
+    <testCase name="AppComponent should create the app" duration="12"/>
+    <testCase name="AppComponent check the first second in header  " duration="9"/>
+    <testCase name="AppComponent check the first item in header  " duration="9"/>
+    <testCase name="AppComponent check the header size " duration="9"/>
+    <testCase name="AppComponent should check the header is the same" duration="7"/>
+    <testCase name="AppComponent should trigger click option performer" duration="6"/>
   </file>
   <file path="src/app/http-erros/components/internet/internet.component.spec.ts">
     <testCase name="InternetComponent should create" duration="7"/>
   </file>
-  <file path="src/app/components/performer-list/performer-list.component.spec.ts">
-    <testCase name="PerformerListComponent Should have an  element band name" duration="72"/>
-    <testCase name="PerformerListComponent Should have an element musician name" duration="16"/>
-    <testCase name="PerformerListComponent should create" duration="15"/>
+  <file path="src/app/components/albumes/albumes.component.spec.ts">
+    <testCase name="AlbumesComponent check the header exists should create" duration="36"/>
+    <testCase name="AlbumesComponent check the header exists should get headers when it exists" duration="11"/>
   </file>
   <file path="src/app/shared/components/cards/cards.component.spec.ts">
-    <testCase name="CardAlbumesComponent should emit index event clickItem" duration="12"/>
-    <testCase name="CardAlbumesComponent check the view when it has data" duration="8"/>
-    <testCase name="CardAlbumesComponent check the view when is the data is empty" duration="8"/>
+    <testCase name="CardAlbumesComponent should emit index event clickItem" duration="5"/>
+    <testCase name="CardAlbumesComponent check the view when is the data is empty" duration="4"/>
+    <testCase name="CardAlbumesComponent should create" duration="4"/>
+    <testCase name="CardAlbumesComponent check the view when it has data" duration="9"/>
     <testCase name="CardAlbumesComponent check the view when is the data is not empty" duration="5"/>
-    <testCase name="CardAlbumesComponent should create" duration="5"/>
   </file>
-  <file path="src/app/app.component.spec.ts">
-    <testCase name="AppComponent should trigger click option album with search" duration="18"/>
-    <testCase name="AppComponent check the header size " duration="8"/>
-    <testCase name="AppComponent check the first item in header  " duration="6"/>
-    <testCase name="AppComponent check the first fourth in header  " duration="8"/>
-    <testCase name="AppComponent should create the app" duration="9"/>
-    <testCase name="AppComponent should trigger click option albumes" duration="11"/>
-    <testCase name="AppComponent check the first third in header  " duration="8"/>
-    <testCase name="AppComponent check the first second in header  " duration="7"/>
-    <testCase name="AppComponent should check the header is the same" duration="7"/>
-    <testCase name="AppComponent should trigger click option performer" duration="8"/>
-    <testCase name="AppComponent should trigger click option collector" duration="9"/>
-  </file>
-  <file path="src/app/components/band-detail/band-detail.component.spec.ts">
-    <testCase name="BandDetailComponent Should have an element album name" duration="43"/>
-    <testCase name="BandDetailComponent check the collection in data" duration="10"/>
-    <testCase name="BandDetailComponent Should have an element band name" duration="16"/>
-    <testCase name="BandDetailComponent should create" duration="10"/>
-    <testCase name="BandDetailComponent Should have an element album record label" duration="13"/>
-    <testCase name="BandDetailComponent Should have an element band description" duration="17"/>
-  </file>
-  <file path="src/app/shared/components/title-table/title-table.component.spec.ts">
-    <testCase name="TitleTableComponent should create" duration="5"/>
-    <testCase name="TitleTableComponent check the input" duration="6"/>
+  <file path="src/app/components/performer-list/performer-list.component.spec.ts">
+    <testCase name="PerformerListComponent should create" duration="34"/>
+    <testCase name="PerformerListComponent Should have an  element band name" duration="12"/>
+    <testCase name="PerformerListComponent Should have an element musician name" duration="14"/>
   </file>
   <file path="src/app/components/albumes/albumes.component.spec.ts">
-    <testCase name="AlbumesComponent check the first album is Salsa" duration="12"/>
+    <testCase name="AlbumesComponent should get headers when is not existe" duration="13"/>
+    <testCase name="AlbumesComponent should trigger click option performer" duration="12"/>
+    <testCase name="AlbumesComponent should show all data when the text is not empty" duration="12"/>
     <testCase name="AlbumesComponent should create" duration="14"/>
-    <testCase name="AlbumesComponent should show all data when the text is not empty" duration="13"/>
-    <testCase name="AlbumesComponent should get headers when is not existe" duration="15"/>
-    <testCase name="AlbumesComponent Checking the albums first name is Buscando América" duration="13"/>
-    <testCase name="AlbumesComponent should show all data when the text is empty" duration="12"/>
-    <testCase name="AlbumesComponent check the albumes is not empty" duration="12"/>
-    <testCase name="AlbumesComponent should trigger click option performer" duration="13"/>
+    <testCase name="AlbumesComponent should show all data when the text is empty" duration="10"/>
+    <testCase name="AlbumesComponent check the first album is Salsa" duration="11"/>
+    <testCase name="AlbumesComponent check the albumes is not empty" duration="14"/>
+    <testCase name="AlbumesComponent Checking the albums first name is Buscando América" duration="10"/>
   </file>
-  <file path="src/app/shared/services/header.service.spec.ts">
-    <testCase name="HeaderService check the data when the user has menu" duration="3"/>
-    <testCase name="HeaderService check the method was been called" duration="4"/>
-    <testCase name="HeaderService should be created" duration="2"/>
-  </file>
-  <file path="src/app/components/collector-detail/collector-detail.component.spec.ts">
-    <testCase name="CollectorDetailComponent check the getCollectorAlbums" duration="23"/>
-    <testCase name="CollectorDetailComponent check the email in data" duration="8"/>
-    <testCase name="CollectorDetailComponent check the navigation" duration="5"/>
-    <testCase name="CollectorDetailComponent check the getCommentsAlbums" duration="9"/>
-    <testCase name="CollectorDetailComponent check the getDetailCollector" duration="5"/>
-    <testCase name="CollectorDetailComponent should create" duration="9"/>
-  </file>
-  <file path="src/app/services/collector.service.spec.ts">
-    <testCase name="Service: Collector should create service" duration="2"/>
-    <testCase name="Service: Collector getCollectors() should return 10 records" duration="3"/>
-  </file>
-  <file path="src/app/components/musician-detail/musician-detail.component.spec.ts">
-    <testCase name="MusicianDetailComponent Should have an element musician description" duration="18"/>
-    <testCase name="MusicianDetailComponent Should have an element album name" duration="10"/>
-    <testCase name="MusicianDetailComponent should create" duration="10"/>
-    <testCase name="MusicianDetailComponent Should have an element album record label" duration="10"/>
-    <testCase name="MusicianDetailComponent check the collection in data" duration="10"/>
-    <testCase name="MusicianDetailComponent Should have an element musician name" duration="12"/>
+  <file path="src/app/shared/components/header/header.component.spec.ts">
+    <testCase name="HeaderComponent should create" duration="6"/>
+    <testCase name="HeaderComponent Checking the view in header" duration="6"/>
+    <testCase name="HeaderComponent should emit index event clickItem" duration="5"/>
   </file>
   <file path="src/app/shared/components/search/search.component.spec.ts">
-    <testCase name="SearchComponent should check the emit" duration="5"/>
-    <testCase name="SearchComponent should create" duration="6"/>
+    <testCase name="SearchComponent should create" duration="5"/>
+    <testCase name="SearchComponent should check the emit" duration="6"/>
+  </file>
+  <file path="src/app/services/collector.service.spec.ts">
+    <testCase name="Service: Collector should create service" duration="3"/>
+    <testCase name="Service: Collector getCollectors() should return 10 records" duration="3"/>
+  </file>
+  <file path="src/app/services/band.service.spec.ts">
+    <testCase name="Service: Band Method getBands() should return 10 records" duration="2"/>
+  </file>
+  <file path="src/app/components/musician-detail/musician-detail.component.spec.ts">
+    <testCase name="MusicianDetailComponent Should have an element musician name" duration="35"/>
+    <testCase name="MusicianDetailComponent Should have an element musician description" duration="16"/>
+    <testCase name="MusicianDetailComponent Should have an element album name" duration="13"/>
+    <testCase name="MusicianDetailComponent Should have an element album record label" duration="10"/>
+    <testCase name="MusicianDetailComponent should create" duration="7"/>
+    <testCase name="MusicianDetailComponent check the collection in data" duration="11"/>
+  </file>
+  <file path="src/app/shared/components/title-table/title-table.component.spec.ts">
+    <testCase name="TitleTableComponent should create" duration="6"/>
+    <testCase name="TitleTableComponent check the input" duration="6"/>
+  </file>
+  <file path="src/app/services/albumes.service.spec.ts">
+    <testCase name="AlbumsService check the services when is having error" duration="6"/>
+    <testCase name="AlbumsService check set and get " duration="3"/>
+    <testCase name="AlbumsService should be created" duration="2"/>
+    <testCase name="AlbumsService check the success services" duration="2"/>
   </file>
   <file path="src/app/components/detail-album/detail-album.component.spec.ts">
-    <testCase name="DetailAlbumComponent check the collection in data" duration="11"/>
-    <testCase name="DetailAlbumComponent should create" duration="9"/>
-    <testCase name="DetailAlbumComponent check the getDetailAlbum with navigation" duration="9"/>
-    <testCase name="DetailAlbumComponent check the navigation" duration="7"/>
-    <testCase name="DetailAlbumComponent check the getDetailAlbum" duration="7"/>
-  </file>
-  <file path="src/app/components/comment/comment.component.spec.ts">
-    <testCase name="CommentComponent check the collection in data" duration="19"/>
-    <testCase name="CommentComponent should create" duration="9"/>
-    <testCase name="CommentComponent check the getDetailAlbum" duration="11"/>
-    <testCase name="CommentComponent check the navigation" duration="14"/>
-  </file>
-  <file path="src/app/services/communicator.service.spec.ts">
-    <testCase name="CommunicatorService check the success services" duration="5"/>
-    <testCase name="CommunicatorService should be created" duration="3"/>
-    <testCase name="CommunicatorService check the success services with different setErrorStatus" duration="3"/>
-    <testCase name="CommunicatorService check the success services with get" duration="2"/>
-    <testCase name="CommunicatorService check the success services with setErrorStatus" duration="2"/>
+    <testCase name="DetailAlbumComponent check the getDetailAlbum" duration="10"/>
+    <testCase name="DetailAlbumComponent should create" duration="10"/>
+    <testCase name="DetailAlbumComponent check the collection in data" duration="7"/>
+    <testCase name="DetailAlbumComponent check the navigation" duration="8"/>
+    <testCase name="DetailAlbumComponent check the getDetailAlbum with navigation" duration="7"/>
   </file>
   <file path="src/app/http-erros/services/manager-error.service.spec.ts">
     <testCase name="ManagerErrorService should trigger click option 500" duration="3"/>
-    <testCase name="ManagerErrorService should trigger click option internet" duration="3"/>
-    <testCase name="ManagerErrorService should be created" duration="4"/>
-    <testCase name="ManagerErrorService should trigger click option 404" duration="3"/>
+    <testCase name="ManagerErrorService should trigger click option 404" duration="2"/>
+    <testCase name="ManagerErrorService should be created" duration="2"/>
+    <testCase name="ManagerErrorService should trigger click option internet" duration="2"/>
   </file>
-  <file path="src/app/services/collector.service.spec.ts">
-    <testCase name="Service: Collector Should have a collector email" duration="3"/>
-    <testCase name="Service: Collector Should have a collector telephone" duration="3"/>
-    <testCase name="Service: Collector should create service" duration="2"/>
-    <testCase name="Service: Collector Should have a collector name" duration="6"/>
-    <testCase name="Service: Collector getCollectors() should return 10 records" duration="2"/>
+  <file path="src/app/services/communicator.service.spec.ts">
+    <testCase name="CommunicatorService 404 with get post response 404" duration="6"/>
   </file>
   <file path="src/app/services/musician.service.spec.ts">
     <testCase name="Service: Musician Method getMusicians() should return 10 records" duration="3"/>
   </file>
+  <file path="src/app/components/collector-detail/collector-detail.component.spec.ts">
+    <testCase name="CollectorDetailComponent check the getDetailCollector" duration="34"/>
+    <testCase name="CollectorDetailComponent check the getCommentsAlbums" duration="9"/>
+    <testCase name="CollectorDetailComponent check the navigation" duration="7"/>
+    <testCase name="CollectorDetailComponent check the getCollectorAlbums" duration="10"/>
+    <testCase name="CollectorDetailComponent should create" duration="6"/>
+    <testCase name="CollectorDetailComponent check the email in data" duration="8"/>
+  </file>
+  <file path="src/app/components/band-detail/band-detail.component.spec.ts">
+    <testCase name="BandDetailComponent check the collection in data" duration="25"/>
+    <testCase name="BandDetailComponent Should have an element album name" duration="11"/>
+    <testCase name="BandDetailComponent Should have an element album record label" duration="9"/>
+    <testCase name="BandDetailComponent Should have an element band name" duration="13"/>
+    <testCase name="BandDetailComponent Should have an element band description" duration="10"/>
+    <testCase name="BandDetailComponent should create" duration="9"/>
+  </file>
   <file path="src/app/services/communicator.service.spec.ts">
-    <testCase name="CommunicatorService post response 404" duration="2"/>
+    <testCase name="CommunicatorService check the success services with different setErrorStatus" duration="2"/>
+    <testCase name="CommunicatorService check the success services with setErrorStatus" duration="3"/>
+    <testCase name="CommunicatorService check the success services" duration="3"/>
+    <testCase name="CommunicatorService check the success services with get" duration="3"/>
+    <testCase name="CommunicatorService should be created" duration="2"/>
+  </file>
+  <file path="src/app/components/comment/comment.component.spec.ts">
+    <testCase name="CommentComponent check the navigation" duration="18"/>
+    <testCase name="CommentComponent should create" duration="10"/>
+    <testCase name="CommentComponent check the getDetailAlbum" duration="7"/>
+    <testCase name="CommentComponent check the collection in data" duration="10"/>
+  </file>
+  <file path="src/app/services/communicator.service.spec.ts">
+    <testCase name="CommunicatorService 404 post response 404" duration="3"/>
+  </file>
+  <file path="src/app/shared/services/header.service.spec.ts">
+    <testCase name="HeaderService check the data when the user has menu" duration="1"/>
+    <testCase name="HeaderService check the method was been called" duration="1"/>
+    <testCase name="HeaderService should be created" duration="2"/>
   </file>
   <file path="src/app/http-erros/interceptors/error.interceptor.service.spec.ts">
-    <testCase name="Error.InterceptorService should catch -1" duration="6"/>
-    <testCase name="Error.InterceptorService should be created" duration="5"/>
-  </file>
-  <file path="src/app/services/band.service.spec.ts">
-    <testCase name="Service: Band Method getBands() should return 10 records" duration="4"/>
-  </file>
-  <file path="src/app/services/albumes.service.spec.ts">
-    <testCase name="AlbumsService check set and get " duration="5"/>
-    <testCase name="AlbumsService check the services when is having error" duration="3"/>
-    <testCase name="AlbumsService check the success services" duration="5"/>
-    <testCase name="AlbumsService should be created" duration="2"/>
-  </file>
-  <file path="src/app/shared/components/header/header.component.spec.ts">
-    <testCase name="HeaderComponent should emit index event clickItem" duration="5"/>
-    <testCase name="HeaderComponent should create" duration="4"/>
-    <testCase name="HeaderComponent Checking the view in header" duration="11"/>
+    <testCase name="Error.InterceptorService should catch -1" duration="8"/>
+    <testCase name="Error.InterceptorService should be created" duration="4"/>
   </file>
 </testExecutions>
